# nexus

./: .dockerignore  .gitignore  .goreleaser.yml  CONTRIBUTING.md  Dockerfile  GTM-STRATEGY.md  LICENSE  PLATFORM.md  README.md  coverage  docker-compose.enterprise.yml  docker-compose.quickstart.yml  docker-compose.yml  go.mod  railway.json  railway.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_test.go  harness.go
cmd/nexus/: main.go
configs/: nexus.enterprise.yaml  nexus.minimal.yaml  nexus.test.yaml  nexus.yaml
docs/: benchmarks.md
docs/agents/: orchestrator-manual.md
docs/architecture/: nexus-hld-lld.md
docs/audit/: architecture-a-plus.md  architecture-review.md  brand-review.md  content-review.md  documentation-a-plus.md  expert-audit-v2.md  expert-audit-v3.md  expert-audit.md  final-check-1.md  final-check-2.md  performance-audit.md  reality-check.md  security-pentest.md  test-quality-a-plus.md  token-efficiency-a-plus.md  ux-architecture.md  ux-audit.md
docs/evidence/: api-contracts.md  (+1 more)
load/: README.md  loadtest.go
monitoring/: prometheus.yml
scripts/: enterprise-init.sh  secret-scan.sh
sdk/python/: README.md  example.py  pyproject.toml
sdk/python/examples/: basic_usage.py  budget_workflow.py  crewai_agents.py  langchain_chain.py
sdk/python/nexus_gateway/: __init__.py  client.py  crewai.py  langchain.py  types.py
site/: docs.html  how-it-works.html  index.html  playground.html  pricing.html  security.html  signup.html
(+150 files in other folders)
