[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-gateway"
version = "0.1.0"
description = "Python SDK for Nexus Inference Optimization Gateway"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Nexus Gateway" }]
keywords = ["llm", "inference", "optimization", "gateway", "routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0", "langchain-openai>=0.1.0"]
crewai = ["crewai>=0.30.0"]
all = ["nexus-gateway[langchain,crewai]"]

[project.urls]
Homepage = "https://github.com/nexus-gateway/nexus"
Documentation = "https://github.com/nexus-gateway/nexus#readme"
